@@ -1719,6 +1719,7 @@
     <include name="Object_PlotOverlay">
         <param name="visible" default="true" />
         <definition>
+
             <control type="group">
 
                 <control type="scrollbar" id="9601">
