@@ -1,6 +1,8 @@
 [B]0.9.22[/B]
 New icons added
 Widget code changes
+Add sort letter on scrolling
+Add page and item numbers on scrollbar
 
 [B]0.9.21[/B]
 Fix musicvideo info
